--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "build": "tsc"
   },
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types"
+  },
   "devDependencies": {
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
     "tslib": "^1.9.3",
     "typescript": "^3.1.6"
   }
