--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react-dom": "^16.0.9",
     "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types",
     "pre-commit": "^1.2.2",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.1.6"
   }
 }
