--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "build"
   ],
   "dependencies": {
+    "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types",
     "react": "^16.6.3",
+    "react-dnd": "^7.0.2",
     "react-dom": "^16.6.3",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types",
     "pre-commit": "^1.2.2",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
