--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   ],
   "dependencies": {
     "digital-signage-types": "https://github.com/kirkbrauer/digital-signage-types",
+    "draft-js": "^0.10.5",
     "react": "^16.6.3",
-    "react-dnd": "^7.0.2",
     "react-dom": "^16.6.3",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.10.26",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "pre-commit": "^1.2.2",
