--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "draft-js": "^0.10.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-youtube": "^7.8.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/draft-js": "^0.10.26",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "@types/react-youtube": "^7.4.2",
     "pre-commit": "^1.2.2",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
